// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Game core figures have right move patterns 1`] = `
"Snapshot Diff:
Compared values have no visual difference."
`;

exports[`Game core figures have right move patterns 2`] = `
"Snapshot Diff:
Compared values have no visual difference."
`;

exports[`Game core figures have right move patterns 3`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -20,11 +20,11 @@
          class=\\"sc-gtsqUy cKTvcv\\"
          color=\\"black\\"
          data-testid=\\"0-2\\"
        >
          <div
-           class=\\"sc-bdnyFh leaQvT\\"
+           class=\\"sc-bdnyFh jcZexO\\"
            side=\\"white\\"
          >
            <img
              alt=\\"\\"
              src=\\"test-file-stub\\""
`;

exports[`Game core figures have right move patterns 4`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -35,11 +35,11 @@
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"0-3\\"
        >
          <div
-           class=\\"sc-bdnyFh leaQvT\\"
+           class=\\"sc-bdnyFh jcZexO\\"
            side=\\"white\\"
          >
            <img
              alt=\\"\\"
              src=\\"test-file-stub\\"
@@ -48,11 +48,15 @@
        </div>
        <div
          class=\\"sc-gtsqUy cKTvcv\\"
          color=\\"black\\"
          data-testid=\\"0-4\\"
+       >
+         <div
+           class=\\"sc-dlniIP eIaIwO\\"
          />
+       </div>
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"0-5\\"
        >"
`;

exports[`Game core figures have right move patterns 5`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -33,10 +33,15 @@
        </div>
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"0-3\\"
+       />
+       <div
+         class=\\"sc-gtsqUy cKTvcv\\"
+         color=\\"black\\"
+         data-testid=\\"0-4\\"
        >
          <div
            class=\\"sc-bdnyFh leaQvT\\"
            side=\\"white\\"
          >
@@ -44,15 +49,10 @@
              alt=\\"\\"
              src=\\"test-file-stub\\"
            />
          </div>
        </div>
-       <div
-         class=\\"sc-gtsqUy cKTvcv\\"
-         color=\\"black\\"
-         data-testid=\\"0-4\\"
-       />
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"0-5\\"
        >"
`;

exports[`Game core figures have right move patterns 6`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -33,10 +33,15 @@
        </div>
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"0-3\\"
+       />
+       <div
+         class=\\"sc-gtsqUy cKTvcv\\"
+         color=\\"black\\"
+         data-testid=\\"0-4\\"
        >
          <div
            class=\\"sc-bdnyFh leaQvT\\"
            side=\\"white\\"
          >
@@ -44,22 +49,17 @@
              alt=\\"\\"
              src=\\"test-file-stub\\"
            />
          </div>
        </div>
-       <div
-         class=\\"sc-gtsqUy cKTvcv\\"
-         color=\\"black\\"
-         data-testid=\\"0-4\\"
-       />
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"0-5\\"
        >
          <div
-           class=\\"sc-bdnyFh leaQvT\\"
+           class=\\"sc-bdnyFh jcZexO\\"
            side=\\"white\\"
          >
            <img
              alt=\\"\\"
              src=\\"test-file-stub\\""
`;

exports[`Game core figures have right move patterns 7`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -33,10 +33,15 @@
        </div>
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"0-3\\"
+       />
+       <div
+         class=\\"sc-gtsqUy cKTvcv\\"
+         color=\\"black\\"
+         data-testid=\\"0-4\\"
        >
          <div
            class=\\"sc-bdnyFh leaQvT\\"
            side=\\"white\\"
          >
@@ -44,15 +49,10 @@
              alt=\\"\\"
              src=\\"test-file-stub\\"
            />
          </div>
        </div>
-       <div
-         class=\\"sc-gtsqUy cKTvcv\\"
-         color=\\"black\\"
-         data-testid=\\"0-4\\"
-       />
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"0-5\\"
        >"
`;

exports[`Game core figures have right move patterns 8`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -33,10 +33,15 @@
        </div>
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"0-3\\"
+       />
+       <div
+         class=\\"sc-gtsqUy cKTvcv\\"
+         color=\\"black\\"
+         data-testid=\\"0-4\\"
        >
          <div
            class=\\"sc-bdnyFh leaQvT\\"
            side=\\"white\\"
          >
@@ -44,15 +49,10 @@
              alt=\\"\\"
              src=\\"test-file-stub\\"
            />
          </div>
        </div>
-       <div
-         class=\\"sc-gtsqUy cKTvcv\\"
-         color=\\"black\\"
-         data-testid=\\"0-4\\"
-       />
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"0-5\\"
        >"
`;

exports[`Game core figures have right move patterns 9`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -33,10 +33,15 @@
        </div>
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"0-3\\"
+       />
+       <div
+         class=\\"sc-gtsqUy cKTvcv\\"
+         color=\\"black\\"
+         data-testid=\\"0-4\\"
        >
          <div
            class=\\"sc-bdnyFh leaQvT\\"
            side=\\"white\\"
          >
@@ -44,15 +49,10 @@
              alt=\\"\\"
              src=\\"test-file-stub\\"
            />
          </div>
        </div>
-       <div
-         class=\\"sc-gtsqUy cKTvcv\\"
-         color=\\"black\\"
-         data-testid=\\"0-4\\"
-       />
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"0-5\\"
        >
@@ -80,11 +80,11 @@
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"1-0\\"
        >
          <div
-           class=\\"sc-bdnyFh leaQvT\\"
+           class=\\"sc-bdnyFh jcZexO\\"
            side=\\"white\\"
          >
            <img
              alt=\\"\\"
              src=\\"test-file-stub\\"
@@ -198,11 +198,15 @@
        </div>
        <div
          class=\\"sc-gtsqUy cKTvcv\\"
          color=\\"black\\"
          data-testid=\\"2-0\\"
+       >
+         <div
+           class=\\"sc-dlniIP eIaIwO\\"
          />
+       </div>
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"2-1\\"
        />
@@ -238,11 +242,15 @@
        />
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"3-0\\"
+       >
+         <div
+           class=\\"sc-dlniIP eIaIwO\\"
          />
+       </div>
        <div
          class=\\"sc-gtsqUy cKTvcv\\"
          color=\\"black\\"
          data-testid=\\"3-1\\"
        />"
`;

exports[`Game core figures have right move patterns 10`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -33,10 +33,15 @@
        </div>
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"0-3\\"
+       />
+       <div
+         class=\\"sc-gtsqUy cKTvcv\\"
+         color=\\"black\\"
+         data-testid=\\"0-4\\"
        >
          <div
            class=\\"sc-bdnyFh leaQvT\\"
            side=\\"white\\"
          >
@@ -44,15 +49,10 @@
              alt=\\"\\"
              src=\\"test-file-stub\\"
            />
          </div>
        </div>
-       <div
-         class=\\"sc-gtsqUy cKTvcv\\"
-         color=\\"black\\"
-         data-testid=\\"0-4\\"
-       />
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"0-5\\"
        >
@@ -95,11 +95,11 @@
          class=\\"sc-gtsqUy cKTvcv\\"
          color=\\"black\\"
          data-testid=\\"1-1\\"
        >
          <div
-           class=\\"sc-bdnyFh leaQvT\\"
+           class=\\"sc-bdnyFh jcZexO\\"
            side=\\"white\\"
          >
            <img
              alt=\\"\\"
              src=\\"test-file-stub\\"
@@ -203,11 +203,15 @@
        />
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"2-1\\"
+       >
+         <div
+           class=\\"sc-dlniIP eIaIwO\\"
          />
+       </div>
        <div
          class=\\"sc-gtsqUy cKTvcv\\"
          color=\\"black\\"
          data-testid=\\"2-2\\"
        />
@@ -243,11 +247,15 @@
        />
        <div
          class=\\"sc-gtsqUy cKTvcv\\"
          color=\\"black\\"
          data-testid=\\"3-1\\"
+       >
+         <div
+           class=\\"sc-dlniIP eIaIwO\\"
          />
+       </div>
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"3-2\\"
        />"
`;

exports[`Game core figures have right move patterns 11`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -33,10 +33,15 @@
        </div>
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"0-3\\"
+       />
+       <div
+         class=\\"sc-gtsqUy cKTvcv\\"
+         color=\\"black\\"
+         data-testid=\\"0-4\\"
        >
          <div
            class=\\"sc-bdnyFh leaQvT\\"
            side=\\"white\\"
          >
@@ -44,15 +49,10 @@
              alt=\\"\\"
              src=\\"test-file-stub\\"
            />
          </div>
        </div>
-       <div
-         class=\\"sc-gtsqUy cKTvcv\\"
-         color=\\"black\\"
-         data-testid=\\"0-4\\"
-       />
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"0-5\\"
        >
@@ -110,11 +110,11 @@
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"1-2\\"
        >
          <div
-           class=\\"sc-bdnyFh leaQvT\\"
+           class=\\"sc-bdnyFh jcZexO\\"
            side=\\"white\\"
          >
            <img
              alt=\\"\\"
              src=\\"test-file-stub\\"
@@ -208,11 +208,15 @@
        />
        <div
          class=\\"sc-gtsqUy cKTvcv\\"
          color=\\"black\\"
          data-testid=\\"2-2\\"
+       >
+         <div
+           class=\\"sc-dlniIP eIaIwO\\"
          />
+       </div>
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"2-3\\"
        />
@@ -248,11 +252,15 @@
        />
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"3-2\\"
+       >
+         <div
+           class=\\"sc-dlniIP eIaIwO\\"
          />
+       </div>
        <div
          class=\\"sc-gtsqUy cKTvcv\\"
          color=\\"black\\"
          data-testid=\\"3-3\\"
        />"
`;

exports[`Game core figures have right move patterns 12`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -33,10 +33,15 @@
        </div>
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"0-3\\"
+       />
+       <div
+         class=\\"sc-gtsqUy cKTvcv\\"
+         color=\\"black\\"
+         data-testid=\\"0-4\\"
        >
          <div
            class=\\"sc-bdnyFh leaQvT\\"
            side=\\"white\\"
          >
@@ -44,15 +49,10 @@
              alt=\\"\\"
              src=\\"test-file-stub\\"
            />
          </div>
        </div>
-       <div
-         class=\\"sc-gtsqUy cKTvcv\\"
-         color=\\"black\\"
-         data-testid=\\"0-4\\"
-       />
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"0-5\\"
        >
@@ -125,11 +125,11 @@
          class=\\"sc-gtsqUy cKTvcv\\"
          color=\\"black\\"
          data-testid=\\"1-3\\"
        >
          <div
-           class=\\"sc-bdnyFh leaQvT\\"
+           class=\\"sc-bdnyFh jcZexO\\"
            side=\\"white\\"
          >
            <img
              alt=\\"\\"
              src=\\"test-file-stub\\"
@@ -213,11 +213,15 @@
        />
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"2-3\\"
+       >
+         <div
+           class=\\"sc-dlniIP eIaIwO\\"
          />
+       </div>
        <div
          class=\\"sc-gtsqUy cKTvcv\\"
          color=\\"black\\"
          data-testid=\\"2-4\\"
        />
@@ -253,11 +257,15 @@
        />
        <div
          class=\\"sc-gtsqUy cKTvcv\\"
          color=\\"black\\"
          data-testid=\\"3-3\\"
+       >
+         <div
+           class=\\"sc-dlniIP eIaIwO\\"
          />
+       </div>
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"3-4\\"
        />"
`;

exports[`Game core figures have right move patterns 13`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -33,10 +33,15 @@
        </div>
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"0-3\\"
+       />
+       <div
+         class=\\"sc-gtsqUy cKTvcv\\"
+         color=\\"black\\"
+         data-testid=\\"0-4\\"
        >
          <div
            class=\\"sc-bdnyFh leaQvT\\"
            side=\\"white\\"
          >
@@ -44,15 +49,10 @@
              alt=\\"\\"
              src=\\"test-file-stub\\"
            />
          </div>
        </div>
-       <div
-         class=\\"sc-gtsqUy cKTvcv\\"
-         color=\\"black\\"
-         data-testid=\\"0-4\\"
-       />
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"0-5\\"
        >
@@ -140,11 +140,11 @@
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"1-4\\"
        >
          <div
-           class=\\"sc-bdnyFh leaQvT\\"
+           class=\\"sc-bdnyFh jcZexO\\"
            side=\\"white\\"
          >
            <img
              alt=\\"\\"
              src=\\"test-file-stub\\"
@@ -218,11 +218,15 @@
        />
        <div
          class=\\"sc-gtsqUy cKTvcv\\"
          color=\\"black\\"
          data-testid=\\"2-4\\"
+       >
+         <div
+           class=\\"sc-dlniIP eIaIwO\\"
          />
+       </div>
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"2-5\\"
        />
@@ -258,11 +262,15 @@
        />
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"3-4\\"
+       >
+         <div
+           class=\\"sc-dlniIP eIaIwO\\"
          />
+       </div>
        <div
          class=\\"sc-gtsqUy cKTvcv\\"
          color=\\"black\\"
          data-testid=\\"3-5\\"
        />"
`;

exports[`Game core figures have right move patterns 14`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -33,10 +33,15 @@
        </div>
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"0-3\\"
+       />
+       <div
+         class=\\"sc-gtsqUy cKTvcv\\"
+         color=\\"black\\"
+         data-testid=\\"0-4\\"
        >
          <div
            class=\\"sc-bdnyFh leaQvT\\"
            side=\\"white\\"
          >
@@ -44,15 +49,10 @@
              alt=\\"\\"
              src=\\"test-file-stub\\"
            />
          </div>
        </div>
-       <div
-         class=\\"sc-gtsqUy cKTvcv\\"
-         color=\\"black\\"
-         data-testid=\\"0-4\\"
-       />
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"0-5\\"
        >
@@ -155,11 +155,11 @@
          class=\\"sc-gtsqUy cKTvcv\\"
          color=\\"black\\"
          data-testid=\\"1-5\\"
        >
          <div
-           class=\\"sc-bdnyFh leaQvT\\"
+           class=\\"sc-bdnyFh jcZexO\\"
            side=\\"white\\"
          >
            <img
              alt=\\"\\"
              src=\\"test-file-stub\\"
@@ -223,11 +223,15 @@
        />
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"2-5\\"
+       >
+         <div
+           class=\\"sc-dlniIP eIaIwO\\"
          />
+       </div>
        <div
          class=\\"sc-gtsqUy cKTvcv\\"
          color=\\"black\\"
          data-testid=\\"2-6\\"
        />
@@ -263,11 +267,15 @@
        />
        <div
          class=\\"sc-gtsqUy cKTvcv\\"
          color=\\"black\\"
          data-testid=\\"3-5\\"
+       >
+         <div
+           class=\\"sc-dlniIP eIaIwO\\"
          />
+       </div>
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"3-6\\"
        />"
`;

exports[`Game core figures have right move patterns 15`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -33,10 +33,15 @@
        </div>
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"0-3\\"
+       />
+       <div
+         class=\\"sc-gtsqUy cKTvcv\\"
+         color=\\"black\\"
+         data-testid=\\"0-4\\"
        >
          <div
            class=\\"sc-bdnyFh leaQvT\\"
            side=\\"white\\"
          >
@@ -44,15 +49,10 @@
              alt=\\"\\"
              src=\\"test-file-stub\\"
            />
          </div>
        </div>
-       <div
-         class=\\"sc-gtsqUy cKTvcv\\"
-         color=\\"black\\"
-         data-testid=\\"0-4\\"
-       />
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"0-5\\"
        >
@@ -170,11 +170,11 @@
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"1-6\\"
        >
          <div
-           class=\\"sc-bdnyFh leaQvT\\"
+           class=\\"sc-bdnyFh jcZexO\\"
            side=\\"white\\"
          >
            <img
              alt=\\"\\"
              src=\\"test-file-stub\\"
@@ -228,11 +228,15 @@
        />
        <div
          class=\\"sc-gtsqUy cKTvcv\\"
          color=\\"black\\"
          data-testid=\\"2-6\\"
+       >
+         <div
+           class=\\"sc-dlniIP eIaIwO\\"
          />
+       </div>
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"2-7\\"
        />
@@ -268,11 +272,15 @@
        />
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"3-6\\"
+       >
+         <div
+           class=\\"sc-dlniIP eIaIwO\\"
          />
+       </div>
        <div
          class=\\"sc-gtsqUy cKTvcv\\"
          color=\\"black\\"
          data-testid=\\"3-7\\"
        />"
`;

exports[`Game core figures have right move patterns 16`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -33,10 +33,15 @@
        </div>
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"0-3\\"
+       />
+       <div
+         class=\\"sc-gtsqUy cKTvcv\\"
+         color=\\"black\\"
+         data-testid=\\"0-4\\"
        >
          <div
            class=\\"sc-bdnyFh leaQvT\\"
            side=\\"white\\"
          >
@@ -44,15 +49,10 @@
              alt=\\"\\"
              src=\\"test-file-stub\\"
            />
          </div>
        </div>
-       <div
-         class=\\"sc-gtsqUy cKTvcv\\"
-         color=\\"black\\"
-         data-testid=\\"0-4\\"
-       />
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"0-5\\"
        >
@@ -185,11 +185,11 @@
          class=\\"sc-gtsqUy cKTvcv\\"
          color=\\"black\\"
          data-testid=\\"1-7\\"
        >
          <div
-           class=\\"sc-bdnyFh leaQvT\\"
+           class=\\"sc-bdnyFh jcZexO\\"
            side=\\"white\\"
          >
            <img
              alt=\\"\\"
              src=\\"test-file-stub\\"
@@ -233,11 +233,15 @@
        />
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"2-7\\"
+       >
+         <div
+           class=\\"sc-dlniIP eIaIwO\\"
          />
+       </div>
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"3-0\\"
        />
@@ -273,11 +277,15 @@
        />
        <div
          class=\\"sc-gtsqUy cKTvcv\\"
          color=\\"black\\"
          data-testid=\\"3-7\\"
+       >
+         <div
+           class=\\"sc-dlniIP eIaIwO\\"
          />
+       </div>
        <div
          class=\\"sc-gtsqUy cKTvcv\\"
          color=\\"black\\"
          data-testid=\\"4-0\\"
        />"
`;

exports[`Game core figures have right move patterns 17`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -33,10 +33,15 @@
        </div>
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"0-3\\"
+       />
+       <div
+         class=\\"sc-gtsqUy cKTvcv\\"
+         color=\\"black\\"
+         data-testid=\\"0-4\\"
        >
          <div
            class=\\"sc-bdnyFh leaQvT\\"
            side=\\"white\\"
          >
@@ -44,15 +49,10 @@
              alt=\\"\\"
              src=\\"test-file-stub\\"
            />
          </div>
        </div>
-       <div
-         class=\\"sc-gtsqUy cKTvcv\\"
-         color=\\"black\\"
-         data-testid=\\"0-4\\"
-       />
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"0-5\\"
        >"
`;

exports[`Game core figures have right move patterns 18`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -33,10 +33,15 @@
        </div>
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"0-3\\"
+       />
+       <div
+         class=\\"sc-gtsqUy cKTvcv\\"
+         color=\\"black\\"
+         data-testid=\\"0-4\\"
        >
          <div
            class=\\"sc-bdnyFh leaQvT\\"
            side=\\"white\\"
          >
@@ -44,15 +49,10 @@
              alt=\\"\\"
              src=\\"test-file-stub\\"
            />
          </div>
        </div>
-       <div
-         class=\\"sc-gtsqUy cKTvcv\\"
-         color=\\"black\\"
-         data-testid=\\"0-4\\"
-       />
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"0-5\\"
        >"
`;

exports[`Game core figures have right move patterns 19`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -33,10 +33,15 @@
        </div>
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"0-3\\"
+       />
+       <div
+         class=\\"sc-gtsqUy cKTvcv\\"
+         color=\\"black\\"
+         data-testid=\\"0-4\\"
        >
          <div
            class=\\"sc-bdnyFh leaQvT\\"
            side=\\"white\\"
          >
@@ -44,15 +49,10 @@
              alt=\\"\\"
              src=\\"test-file-stub\\"
            />
          </div>
        </div>
-       <div
-         class=\\"sc-gtsqUy cKTvcv\\"
-         color=\\"black\\"
-         data-testid=\\"0-4\\"
-       />
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"0-5\\"
        >"
`;

exports[`Game core figures have right move patterns 20`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -33,10 +33,15 @@
        </div>
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"0-3\\"
+       />
+       <div
+         class=\\"sc-gtsqUy cKTvcv\\"
+         color=\\"black\\"
+         data-testid=\\"0-4\\"
        >
          <div
            class=\\"sc-bdnyFh leaQvT\\"
            side=\\"white\\"
          >
@@ -44,15 +49,10 @@
              alt=\\"\\"
              src=\\"test-file-stub\\"
            />
          </div>
        </div>
-       <div
-         class=\\"sc-gtsqUy cKTvcv\\"
-         color=\\"black\\"
-         data-testid=\\"0-4\\"
-       />
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"0-5\\"
        >"
`;

exports[`Game core figures have right move patterns 21`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -33,10 +33,15 @@
        </div>
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"0-3\\"
+       />
+       <div
+         class=\\"sc-gtsqUy cKTvcv\\"
+         color=\\"black\\"
+         data-testid=\\"0-4\\"
        >
          <div
            class=\\"sc-bdnyFh leaQvT\\"
            side=\\"white\\"
          >
@@ -44,15 +49,10 @@
              alt=\\"\\"
              src=\\"test-file-stub\\"
            />
          </div>
        </div>
-       <div
-         class=\\"sc-gtsqUy cKTvcv\\"
-         color=\\"black\\"
-         data-testid=\\"0-4\\"
-       />
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"0-5\\"
        >"
`;

exports[`Game core figures have right move patterns 22`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -33,10 +33,15 @@
        </div>
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"0-3\\"
+       />
+       <div
+         class=\\"sc-gtsqUy cKTvcv\\"
+         color=\\"black\\"
+         data-testid=\\"0-4\\"
        >
          <div
            class=\\"sc-bdnyFh leaQvT\\"
            side=\\"white\\"
          >
@@ -44,15 +49,10 @@
              alt=\\"\\"
              src=\\"test-file-stub\\"
            />
          </div>
        </div>
-       <div
-         class=\\"sc-gtsqUy cKTvcv\\"
-         color=\\"black\\"
-         data-testid=\\"0-4\\"
-       />
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"0-5\\"
        >"
`;

exports[`Game core figures have right move patterns 23`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -33,10 +33,15 @@
        </div>
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"0-3\\"
+       />
+       <div
+         class=\\"sc-gtsqUy cKTvcv\\"
+         color=\\"black\\"
+         data-testid=\\"0-4\\"
        >
          <div
            class=\\"sc-bdnyFh leaQvT\\"
            side=\\"white\\"
          >
@@ -44,15 +49,10 @@
              alt=\\"\\"
              src=\\"test-file-stub\\"
            />
          </div>
        </div>
-       <div
-         class=\\"sc-gtsqUy cKTvcv\\"
-         color=\\"black\\"
-         data-testid=\\"0-4\\"
-       />
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"0-5\\"
        >"
`;

exports[`Game core figures have right move patterns 24`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -33,10 +33,15 @@
        </div>
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"0-3\\"
+       />
+       <div
+         class=\\"sc-gtsqUy cKTvcv\\"
+         color=\\"black\\"
+         data-testid=\\"0-4\\"
        >
          <div
            class=\\"sc-bdnyFh leaQvT\\"
            side=\\"white\\"
          >
@@ -44,15 +49,10 @@
              alt=\\"\\"
              src=\\"test-file-stub\\"
            />
          </div>
        </div>
-       <div
-         class=\\"sc-gtsqUy cKTvcv\\"
-         color=\\"black\\"
-         data-testid=\\"0-4\\"
-       />
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"0-5\\"
        >"
`;

exports[`Game core figures have right move patterns 25`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -33,10 +33,15 @@
        </div>
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"0-3\\"
+       />
+       <div
+         class=\\"sc-gtsqUy cKTvcv\\"
+         color=\\"black\\"
+         data-testid=\\"0-4\\"
        >
          <div
            class=\\"sc-bdnyFh leaQvT\\"
            side=\\"white\\"
          >
@@ -44,15 +49,10 @@
              alt=\\"\\"
              src=\\"test-file-stub\\"
            />
          </div>
        </div>
-       <div
-         class=\\"sc-gtsqUy cKTvcv\\"
-         color=\\"black\\"
-         data-testid=\\"0-4\\"
-       />
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"0-5\\"
        >"
`;

exports[`Game core figures have right move patterns 26`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -33,10 +33,15 @@
        </div>
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"0-3\\"
+       />
+       <div
+         class=\\"sc-gtsqUy cKTvcv\\"
+         color=\\"black\\"
+         data-testid=\\"0-4\\"
        >
          <div
            class=\\"sc-bdnyFh leaQvT\\"
            side=\\"white\\"
          >
@@ -44,15 +49,10 @@
              alt=\\"\\"
              src=\\"test-file-stub\\"
            />
          </div>
        </div>
-       <div
-         class=\\"sc-gtsqUy cKTvcv\\"
-         color=\\"black\\"
-         data-testid=\\"0-4\\"
-       />
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"0-5\\"
        >"
`;

exports[`Game core figures have right move patterns 27`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -33,10 +33,15 @@
        </div>
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"0-3\\"
+       />
+       <div
+         class=\\"sc-gtsqUy cKTvcv\\"
+         color=\\"black\\"
+         data-testid=\\"0-4\\"
        >
          <div
            class=\\"sc-bdnyFh leaQvT\\"
            side=\\"white\\"
          >
@@ -44,15 +49,10 @@
              alt=\\"\\"
              src=\\"test-file-stub\\"
            />
          </div>
        </div>
-       <div
-         class=\\"sc-gtsqUy cKTvcv\\"
-         color=\\"black\\"
-         data-testid=\\"0-4\\"
-       />
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"0-5\\"
        >"
`;

exports[`Game core figures have right move patterns 28`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -33,10 +33,15 @@
        </div>
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"0-3\\"
+       />
+       <div
+         class=\\"sc-gtsqUy cKTvcv\\"
+         color=\\"black\\"
+         data-testid=\\"0-4\\"
        >
          <div
            class=\\"sc-bdnyFh leaQvT\\"
            side=\\"white\\"
          >
@@ -44,15 +49,10 @@
              alt=\\"\\"
              src=\\"test-file-stub\\"
            />
          </div>
        </div>
-       <div
-         class=\\"sc-gtsqUy cKTvcv\\"
-         color=\\"black\\"
-         data-testid=\\"0-4\\"
-       />
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"0-5\\"
        >"
`;

exports[`Game core figures have right move patterns 29`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -33,10 +33,15 @@
        </div>
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"0-3\\"
+       />
+       <div
+         class=\\"sc-gtsqUy cKTvcv\\"
+         color=\\"black\\"
+         data-testid=\\"0-4\\"
        >
          <div
            class=\\"sc-bdnyFh leaQvT\\"
            side=\\"white\\"
          >
@@ -44,15 +49,10 @@
              alt=\\"\\"
              src=\\"test-file-stub\\"
            />
          </div>
        </div>
-       <div
-         class=\\"sc-gtsqUy cKTvcv\\"
-         color=\\"black\\"
-         data-testid=\\"0-4\\"
-       />
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"0-5\\"
        >"
`;

exports[`Game core figures have right move patterns 30`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -33,10 +33,15 @@
        </div>
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"0-3\\"
+       />
+       <div
+         class=\\"sc-gtsqUy cKTvcv\\"
+         color=\\"black\\"
+         data-testid=\\"0-4\\"
        >
          <div
            class=\\"sc-bdnyFh leaQvT\\"
            side=\\"white\\"
          >
@@ -44,15 +49,10 @@
              alt=\\"\\"
              src=\\"test-file-stub\\"
            />
          </div>
        </div>
-       <div
-         class=\\"sc-gtsqUy cKTvcv\\"
-         color=\\"black\\"
-         data-testid=\\"0-4\\"
-       />
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"0-5\\"
        >"
`;

exports[`Game core figures have right move patterns 31`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -33,10 +33,15 @@
        </div>
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"0-3\\"
+       />
+       <div
+         class=\\"sc-gtsqUy cKTvcv\\"
+         color=\\"black\\"
+         data-testid=\\"0-4\\"
        >
          <div
            class=\\"sc-bdnyFh leaQvT\\"
            side=\\"white\\"
          >
@@ -44,15 +49,10 @@
              alt=\\"\\"
              src=\\"test-file-stub\\"
            />
          </div>
        </div>
-       <div
-         class=\\"sc-gtsqUy cKTvcv\\"
-         color=\\"black\\"
-         data-testid=\\"0-4\\"
-       />
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"0-5\\"
        >"
`;

exports[`Game core figures have right move patterns 32`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -33,10 +33,15 @@
        </div>
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"0-3\\"
+       />
+       <div
+         class=\\"sc-gtsqUy cKTvcv\\"
+         color=\\"black\\"
+         data-testid=\\"0-4\\"
        >
          <div
            class=\\"sc-bdnyFh leaQvT\\"
            side=\\"white\\"
          >
@@ -44,15 +49,10 @@
              alt=\\"\\"
              src=\\"test-file-stub\\"
            />
          </div>
        </div>
-       <div
-         class=\\"sc-gtsqUy cKTvcv\\"
-         color=\\"black\\"
-         data-testid=\\"0-4\\"
-       />
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"0-5\\"
        >"
`;

exports[`Game core figures have right move patterns 33`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -33,10 +33,15 @@
        </div>
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"0-3\\"
+       />
+       <div
+         class=\\"sc-gtsqUy cKTvcv\\"
+         color=\\"black\\"
+         data-testid=\\"0-4\\"
        >
          <div
            class=\\"sc-bdnyFh leaQvT\\"
            side=\\"white\\"
          >
@@ -44,15 +49,10 @@
              alt=\\"\\"
              src=\\"test-file-stub\\"
            />
          </div>
        </div>
-       <div
-         class=\\"sc-gtsqUy cKTvcv\\"
-         color=\\"black\\"
-         data-testid=\\"0-4\\"
-       />
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"0-5\\"
        >"
`;

exports[`Game core figures have right move patterns 34`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -33,10 +33,15 @@
        </div>
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"0-3\\"
+       />
+       <div
+         class=\\"sc-gtsqUy cKTvcv\\"
+         color=\\"black\\"
+         data-testid=\\"0-4\\"
        >
          <div
            class=\\"sc-bdnyFh leaQvT\\"
            side=\\"white\\"
          >
@@ -44,15 +49,10 @@
              alt=\\"\\"
              src=\\"test-file-stub\\"
            />
          </div>
        </div>
-       <div
-         class=\\"sc-gtsqUy cKTvcv\\"
-         color=\\"black\\"
-         data-testid=\\"0-4\\"
-       />
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"0-5\\"
        >"
`;

exports[`Game core figures have right move patterns 35`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -33,10 +33,15 @@
        </div>
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"0-3\\"
+       />
+       <div
+         class=\\"sc-gtsqUy cKTvcv\\"
+         color=\\"black\\"
+         data-testid=\\"0-4\\"
        >
          <div
            class=\\"sc-bdnyFh leaQvT\\"
            side=\\"white\\"
          >
@@ -44,15 +49,10 @@
              alt=\\"\\"
              src=\\"test-file-stub\\"
            />
          </div>
        </div>
-       <div
-         class=\\"sc-gtsqUy cKTvcv\\"
-         color=\\"black\\"
-         data-testid=\\"0-4\\"
-       />
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"0-5\\"
        >"
`;

exports[`Game core figures have right move patterns 36`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -33,10 +33,15 @@
        </div>
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"0-3\\"
+       />
+       <div
+         class=\\"sc-gtsqUy cKTvcv\\"
+         color=\\"black\\"
+         data-testid=\\"0-4\\"
        >
          <div
            class=\\"sc-bdnyFh leaQvT\\"
            side=\\"white\\"
          >
@@ -44,15 +49,10 @@
              alt=\\"\\"
              src=\\"test-file-stub\\"
            />
          </div>
        </div>
-       <div
-         class=\\"sc-gtsqUy cKTvcv\\"
-         color=\\"black\\"
-         data-testid=\\"0-4\\"
-       />
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"0-5\\"
        >"
`;

exports[`Game core figures have right move patterns 37`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -33,10 +33,15 @@
        </div>
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"0-3\\"
+       />
+       <div
+         class=\\"sc-gtsqUy cKTvcv\\"
+         color=\\"black\\"
+         data-testid=\\"0-4\\"
        >
          <div
            class=\\"sc-bdnyFh leaQvT\\"
            side=\\"white\\"
          >
@@ -44,15 +49,10 @@
              alt=\\"\\"
              src=\\"test-file-stub\\"
            />
          </div>
        </div>
-       <div
-         class=\\"sc-gtsqUy cKTvcv\\"
-         color=\\"black\\"
-         data-testid=\\"0-4\\"
-       />
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"0-5\\"
        >"
`;

exports[`Game core figures have right move patterns 38`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -33,10 +33,15 @@
        </div>
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"0-3\\"
+       />
+       <div
+         class=\\"sc-gtsqUy cKTvcv\\"
+         color=\\"black\\"
+         data-testid=\\"0-4\\"
        >
          <div
            class=\\"sc-bdnyFh leaQvT\\"
            side=\\"white\\"
          >
@@ -44,15 +49,10 @@
              alt=\\"\\"
              src=\\"test-file-stub\\"
            />
          </div>
        </div>
-       <div
-         class=\\"sc-gtsqUy cKTvcv\\"
-         color=\\"black\\"
-         data-testid=\\"0-4\\"
-       />
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"0-5\\"
        >"
`;

exports[`Game core figures have right move patterns 39`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -33,10 +33,15 @@
        </div>
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"0-3\\"
+       />
+       <div
+         class=\\"sc-gtsqUy cKTvcv\\"
+         color=\\"black\\"
+         data-testid=\\"0-4\\"
        >
          <div
            class=\\"sc-bdnyFh leaQvT\\"
            side=\\"white\\"
          >
@@ -44,15 +49,10 @@
              alt=\\"\\"
              src=\\"test-file-stub\\"
            />
          </div>
        </div>
-       <div
-         class=\\"sc-gtsqUy cKTvcv\\"
-         color=\\"black\\"
-         data-testid=\\"0-4\\"
-       />
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"0-5\\"
        >"
`;

exports[`Game core figures have right move patterns 40`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -33,10 +33,15 @@
        </div>
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"0-3\\"
+       />
+       <div
+         class=\\"sc-gtsqUy cKTvcv\\"
+         color=\\"black\\"
+         data-testid=\\"0-4\\"
        >
          <div
            class=\\"sc-bdnyFh leaQvT\\"
            side=\\"white\\"
          >
@@ -44,15 +49,10 @@
              alt=\\"\\"
              src=\\"test-file-stub\\"
            />
          </div>
        </div>
-       <div
-         class=\\"sc-gtsqUy cKTvcv\\"
-         color=\\"black\\"
-         data-testid=\\"0-4\\"
-       />
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"0-5\\"
        >"
`;

exports[`Game core figures have right move patterns 41`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -33,10 +33,15 @@
        </div>
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"0-3\\"
+       />
+       <div
+         class=\\"sc-gtsqUy cKTvcv\\"
+         color=\\"black\\"
+         data-testid=\\"0-4\\"
        >
          <div
            class=\\"sc-bdnyFh leaQvT\\"
            side=\\"white\\"
          >
@@ -44,15 +49,10 @@
              alt=\\"\\"
              src=\\"test-file-stub\\"
            />
          </div>
        </div>
-       <div
-         class=\\"sc-gtsqUy cKTvcv\\"
-         color=\\"black\\"
-         data-testid=\\"0-4\\"
-       />
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"0-5\\"
        >"
`;

exports[`Game core figures have right move patterns 42`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -33,10 +33,15 @@
        </div>
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"0-3\\"
+       />
+       <div
+         class=\\"sc-gtsqUy cKTvcv\\"
+         color=\\"black\\"
+         data-testid=\\"0-4\\"
        >
          <div
            class=\\"sc-bdnyFh leaQvT\\"
            side=\\"white\\"
          >
@@ -44,15 +49,10 @@
              alt=\\"\\"
              src=\\"test-file-stub\\"
            />
          </div>
        </div>
-       <div
-         class=\\"sc-gtsqUy cKTvcv\\"
-         color=\\"black\\"
-         data-testid=\\"0-4\\"
-       />
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"0-5\\"
        >"
`;

exports[`Game core figures have right move patterns 43`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -33,10 +33,15 @@
        </div>
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"0-3\\"
+       />
+       <div
+         class=\\"sc-gtsqUy cKTvcv\\"
+         color=\\"black\\"
+         data-testid=\\"0-4\\"
        >
          <div
            class=\\"sc-bdnyFh leaQvT\\"
            side=\\"white\\"
          >
@@ -44,15 +49,10 @@
              alt=\\"\\"
              src=\\"test-file-stub\\"
            />
          </div>
        </div>
-       <div
-         class=\\"sc-gtsqUy cKTvcv\\"
-         color=\\"black\\"
-         data-testid=\\"0-4\\"
-       />
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"0-5\\"
        >"
`;

exports[`Game core figures have right move patterns 44`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -33,10 +33,15 @@
        </div>
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"0-3\\"
+       />
+       <div
+         class=\\"sc-gtsqUy cKTvcv\\"
+         color=\\"black\\"
+         data-testid=\\"0-4\\"
        >
          <div
            class=\\"sc-bdnyFh leaQvT\\"
            side=\\"white\\"
          >
@@ -44,15 +49,10 @@
              alt=\\"\\"
              src=\\"test-file-stub\\"
            />
          </div>
        </div>
-       <div
-         class=\\"sc-gtsqUy cKTvcv\\"
-         color=\\"black\\"
-         data-testid=\\"0-4\\"
-       />
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"0-5\\"
        >"
`;

exports[`Game core figures have right move patterns 45`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -33,10 +33,15 @@
        </div>
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"0-3\\"
+       />
+       <div
+         class=\\"sc-gtsqUy cKTvcv\\"
+         color=\\"black\\"
+         data-testid=\\"0-4\\"
        >
          <div
            class=\\"sc-bdnyFh leaQvT\\"
            side=\\"white\\"
          >
@@ -44,15 +49,10 @@
              alt=\\"\\"
              src=\\"test-file-stub\\"
            />
          </div>
        </div>
-       <div
-         class=\\"sc-gtsqUy cKTvcv\\"
-         color=\\"black\\"
-         data-testid=\\"0-4\\"
-       />
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"0-5\\"
        >"
`;

exports[`Game core figures have right move patterns 46`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -33,10 +33,15 @@
        </div>
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"0-3\\"
+       />
+       <div
+         class=\\"sc-gtsqUy cKTvcv\\"
+         color=\\"black\\"
+         data-testid=\\"0-4\\"
        >
          <div
            class=\\"sc-bdnyFh leaQvT\\"
            side=\\"white\\"
          >
@@ -44,15 +49,10 @@
              alt=\\"\\"
              src=\\"test-file-stub\\"
            />
          </div>
        </div>
-       <div
-         class=\\"sc-gtsqUy cKTvcv\\"
-         color=\\"black\\"
-         data-testid=\\"0-4\\"
-       />
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"0-5\\"
        >"
`;

exports[`Game core figures have right move patterns 47`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -33,10 +33,15 @@
        </div>
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"0-3\\"
+       />
+       <div
+         class=\\"sc-gtsqUy cKTvcv\\"
+         color=\\"black\\"
+         data-testid=\\"0-4\\"
        >
          <div
            class=\\"sc-bdnyFh leaQvT\\"
            side=\\"white\\"
          >
@@ -44,15 +49,10 @@
              alt=\\"\\"
              src=\\"test-file-stub\\"
            />
          </div>
        </div>
-       <div
-         class=\\"sc-gtsqUy cKTvcv\\"
-         color=\\"black\\"
-         data-testid=\\"0-4\\"
-       />
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"0-5\\"
        >"
`;

exports[`Game core figures have right move patterns 48`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -33,10 +33,15 @@
        </div>
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"0-3\\"
+       />
+       <div
+         class=\\"sc-gtsqUy cKTvcv\\"
+         color=\\"black\\"
+         data-testid=\\"0-4\\"
        >
          <div
            class=\\"sc-bdnyFh leaQvT\\"
            side=\\"white\\"
          >
@@ -44,15 +49,10 @@
              alt=\\"\\"
              src=\\"test-file-stub\\"
            />
          </div>
        </div>
-       <div
-         class=\\"sc-gtsqUy cKTvcv\\"
-         color=\\"black\\"
-         data-testid=\\"0-4\\"
-       />
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"0-5\\"
        >"
`;

exports[`Game core figures have right move patterns 49`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -33,10 +33,15 @@
        </div>
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"0-3\\"
+       />
+       <div
+         class=\\"sc-gtsqUy cKTvcv\\"
+         color=\\"black\\"
+         data-testid=\\"0-4\\"
        >
          <div
            class=\\"sc-bdnyFh leaQvT\\"
            side=\\"white\\"
          >
@@ -44,15 +49,10 @@
              alt=\\"\\"
              src=\\"test-file-stub\\"
            />
          </div>
        </div>
-       <div
-         class=\\"sc-gtsqUy cKTvcv\\"
-         color=\\"black\\"
-         data-testid=\\"0-4\\"
-       />
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"0-5\\"
        >
@@ -278,11 +278,15 @@
        />
        <div
          class=\\"sc-gtsqUy cKTvcv\\"
          color=\\"black\\"
          data-testid=\\"4-0\\"
+       >
+         <div
+           class=\\"sc-dlniIP eIaIwO\\"
          />
+       </div>
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"4-1\\"
        />
@@ -318,11 +322,15 @@
        />
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"5-0\\"
+       >
+         <div
+           class=\\"sc-dlniIP eIaIwO\\"
          />
+       </div>
        <div
          class=\\"sc-gtsqUy cKTvcv\\"
          color=\\"black\\"
          data-testid=\\"5-1\\"
        />
@@ -360,11 +368,11 @@
          class=\\"sc-gtsqUy cKTvcv\\"
          color=\\"black\\"
          data-testid=\\"6-0\\"
        >
          <div
-           class=\\"sc-bdnyFh iFMPlL\\"
+           class=\\"sc-bdnyFh gAkUhO\\"
            side=\\"black\\"
          >
            <img
              alt=\\"\\"
              src=\\"test-file-stub\\""
`;

exports[`Game core figures have right move patterns 50`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -33,10 +33,15 @@
        </div>
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"0-3\\"
+       />
+       <div
+         class=\\"sc-gtsqUy cKTvcv\\"
+         color=\\"black\\"
+         data-testid=\\"0-4\\"
        >
          <div
            class=\\"sc-bdnyFh leaQvT\\"
            side=\\"white\\"
          >
@@ -44,15 +49,10 @@
              alt=\\"\\"
              src=\\"test-file-stub\\"
            />
          </div>
        </div>
-       <div
-         class=\\"sc-gtsqUy cKTvcv\\"
-         color=\\"black\\"
-         data-testid=\\"0-4\\"
-       />
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"0-5\\"
        >
@@ -283,11 +283,15 @@
        />
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"4-1\\"
+       >
+         <div
+           class=\\"sc-dlniIP eIaIwO\\"
          />
+       </div>
        <div
          class=\\"sc-gtsqUy cKTvcv\\"
          color=\\"black\\"
          data-testid=\\"4-2\\"
        />
@@ -323,11 +327,15 @@
        />
        <div
          class=\\"sc-gtsqUy cKTvcv\\"
          color=\\"black\\"
          data-testid=\\"5-1\\"
+       >
+         <div
+           class=\\"sc-dlniIP eIaIwO\\"
          />
+       </div>
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"5-2\\"
        />
@@ -375,11 +383,11 @@
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"6-1\\"
        >
          <div
-           class=\\"sc-bdnyFh iFMPlL\\"
+           class=\\"sc-bdnyFh gAkUhO\\"
            side=\\"black\\"
          >
            <img
              alt=\\"\\"
              src=\\"test-file-stub\\""
`;

exports[`Game core figures have right move patterns 51`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -33,10 +33,15 @@
        </div>
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"0-3\\"
+       />
+       <div
+         class=\\"sc-gtsqUy cKTvcv\\"
+         color=\\"black\\"
+         data-testid=\\"0-4\\"
        >
          <div
            class=\\"sc-bdnyFh leaQvT\\"
            side=\\"white\\"
          >
@@ -44,15 +49,10 @@
              alt=\\"\\"
              src=\\"test-file-stub\\"
            />
          </div>
        </div>
-       <div
-         class=\\"sc-gtsqUy cKTvcv\\"
-         color=\\"black\\"
-         data-testid=\\"0-4\\"
-       />
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"0-5\\"
        >
@@ -288,11 +288,15 @@
        />
        <div
          class=\\"sc-gtsqUy cKTvcv\\"
          color=\\"black\\"
          data-testid=\\"4-2\\"
+       >
+         <div
+           class=\\"sc-dlniIP eIaIwO\\"
          />
+       </div>
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"4-3\\"
        />
@@ -328,11 +332,15 @@
        />
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"5-2\\"
+       >
+         <div
+           class=\\"sc-dlniIP eIaIwO\\"
          />
+       </div>
        <div
          class=\\"sc-gtsqUy cKTvcv\\"
          color=\\"black\\"
          data-testid=\\"5-3\\"
        />
@@ -390,11 +398,11 @@
          class=\\"sc-gtsqUy cKTvcv\\"
          color=\\"black\\"
          data-testid=\\"6-2\\"
        >
          <div
-           class=\\"sc-bdnyFh iFMPlL\\"
+           class=\\"sc-bdnyFh gAkUhO\\"
            side=\\"black\\"
          >
            <img
              alt=\\"\\"
              src=\\"test-file-stub\\""
`;

exports[`Game core figures have right move patterns 52`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -33,10 +33,15 @@
        </div>
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"0-3\\"
+       />
+       <div
+         class=\\"sc-gtsqUy cKTvcv\\"
+         color=\\"black\\"
+         data-testid=\\"0-4\\"
        >
          <div
            class=\\"sc-bdnyFh leaQvT\\"
            side=\\"white\\"
          >
@@ -44,15 +49,10 @@
              alt=\\"\\"
              src=\\"test-file-stub\\"
            />
          </div>
        </div>
-       <div
-         class=\\"sc-gtsqUy cKTvcv\\"
-         color=\\"black\\"
-         data-testid=\\"0-4\\"
-       />
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"0-5\\"
        >
@@ -293,11 +293,15 @@
        />
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"4-3\\"
+       >
+         <div
+           class=\\"sc-dlniIP eIaIwO\\"
          />
+       </div>
        <div
          class=\\"sc-gtsqUy cKTvcv\\"
          color=\\"black\\"
          data-testid=\\"4-4\\"
        />
@@ -333,11 +337,15 @@
        />
        <div
          class=\\"sc-gtsqUy cKTvcv\\"
          color=\\"black\\"
          data-testid=\\"5-3\\"
+       >
+         <div
+           class=\\"sc-dlniIP eIaIwO\\"
          />
+       </div>
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"5-4\\"
        />
@@ -405,11 +413,11 @@
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"6-3\\"
        >
          <div
-           class=\\"sc-bdnyFh iFMPlL\\"
+           class=\\"sc-bdnyFh gAkUhO\\"
            side=\\"black\\"
          >
            <img
              alt=\\"\\"
              src=\\"test-file-stub\\""
`;

exports[`Game core figures have right move patterns 53`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -33,10 +33,15 @@
        </div>
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"0-3\\"
+       />
+       <div
+         class=\\"sc-gtsqUy cKTvcv\\"
+         color=\\"black\\"
+         data-testid=\\"0-4\\"
        >
          <div
            class=\\"sc-bdnyFh leaQvT\\"
            side=\\"white\\"
          >
@@ -44,15 +49,10 @@
              alt=\\"\\"
              src=\\"test-file-stub\\"
            />
          </div>
        </div>
-       <div
-         class=\\"sc-gtsqUy cKTvcv\\"
-         color=\\"black\\"
-         data-testid=\\"0-4\\"
-       />
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"0-5\\"
        >
@@ -298,11 +298,15 @@
        />
        <div
          class=\\"sc-gtsqUy cKTvcv\\"
          color=\\"black\\"
          data-testid=\\"4-4\\"
+       >
+         <div
+           class=\\"sc-dlniIP eIaIwO\\"
          />
+       </div>
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"4-5\\"
        />
@@ -338,11 +342,15 @@
        />
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"5-4\\"
+       >
+         <div
+           class=\\"sc-dlniIP eIaIwO\\"
          />
+       </div>
        <div
          class=\\"sc-gtsqUy cKTvcv\\"
          color=\\"black\\"
          data-testid=\\"5-5\\"
        />
@@ -420,11 +428,11 @@
          class=\\"sc-gtsqUy cKTvcv\\"
          color=\\"black\\"
          data-testid=\\"6-4\\"
        >
          <div
-           class=\\"sc-bdnyFh iFMPlL\\"
+           class=\\"sc-bdnyFh gAkUhO\\"
            side=\\"black\\"
          >
            <img
              alt=\\"\\"
              src=\\"test-file-stub\\""
`;

exports[`Game core figures have right move patterns 54`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -33,10 +33,15 @@
        </div>
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"0-3\\"
+       />
+       <div
+         class=\\"sc-gtsqUy cKTvcv\\"
+         color=\\"black\\"
+         data-testid=\\"0-4\\"
        >
          <div
            class=\\"sc-bdnyFh leaQvT\\"
            side=\\"white\\"
          >
@@ -44,15 +49,10 @@
              alt=\\"\\"
              src=\\"test-file-stub\\"
            />
          </div>
        </div>
-       <div
-         class=\\"sc-gtsqUy cKTvcv\\"
-         color=\\"black\\"
-         data-testid=\\"0-4\\"
-       />
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"0-5\\"
        >
@@ -303,11 +303,15 @@
        />
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"4-5\\"
+       >
+         <div
+           class=\\"sc-dlniIP eIaIwO\\"
          />
+       </div>
        <div
          class=\\"sc-gtsqUy cKTvcv\\"
          color=\\"black\\"
          data-testid=\\"4-6\\"
        />
@@ -343,11 +347,15 @@
        />
        <div
          class=\\"sc-gtsqUy cKTvcv\\"
          color=\\"black\\"
          data-testid=\\"5-5\\"
+       >
+         <div
+           class=\\"sc-dlniIP eIaIwO\\"
          />
+       </div>
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"5-6\\"
        />
@@ -435,11 +443,11 @@
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"6-5\\"
        >
          <div
-           class=\\"sc-bdnyFh iFMPlL\\"
+           class=\\"sc-bdnyFh gAkUhO\\"
            side=\\"black\\"
          >
            <img
              alt=\\"\\"
              src=\\"test-file-stub\\""
`;

exports[`Game core figures have right move patterns 55`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -33,10 +33,15 @@
        </div>
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"0-3\\"
+       />
+       <div
+         class=\\"sc-gtsqUy cKTvcv\\"
+         color=\\"black\\"
+         data-testid=\\"0-4\\"
        >
          <div
            class=\\"sc-bdnyFh leaQvT\\"
            side=\\"white\\"
          >
@@ -44,15 +49,10 @@
              alt=\\"\\"
              src=\\"test-file-stub\\"
            />
          </div>
        </div>
-       <div
-         class=\\"sc-gtsqUy cKTvcv\\"
-         color=\\"black\\"
-         data-testid=\\"0-4\\"
-       />
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"0-5\\"
        >
@@ -308,11 +308,15 @@
        />
        <div
          class=\\"sc-gtsqUy cKTvcv\\"
          color=\\"black\\"
          data-testid=\\"4-6\\"
+       >
+         <div
+           class=\\"sc-dlniIP eIaIwO\\"
          />
+       </div>
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"4-7\\"
        />
@@ -348,11 +352,15 @@
        />
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"5-6\\"
+       >
+         <div
+           class=\\"sc-dlniIP eIaIwO\\"
          />
+       </div>
        <div
          class=\\"sc-gtsqUy cKTvcv\\"
          color=\\"black\\"
          data-testid=\\"5-7\\"
        />
@@ -450,11 +458,11 @@
          class=\\"sc-gtsqUy cKTvcv\\"
          color=\\"black\\"
          data-testid=\\"6-6\\"
        >
          <div
-           class=\\"sc-bdnyFh iFMPlL\\"
+           class=\\"sc-bdnyFh gAkUhO\\"
            side=\\"black\\"
          >
            <img
              alt=\\"\\"
              src=\\"test-file-stub\\""
`;

exports[`Game core figures have right move patterns 56`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -33,10 +33,15 @@
        </div>
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"0-3\\"
+       />
+       <div
+         class=\\"sc-gtsqUy cKTvcv\\"
+         color=\\"black\\"
+         data-testid=\\"0-4\\"
        >
          <div
            class=\\"sc-bdnyFh leaQvT\\"
            side=\\"white\\"
          >
@@ -44,15 +49,10 @@
              alt=\\"\\"
              src=\\"test-file-stub\\"
            />
          </div>
        </div>
-       <div
-         class=\\"sc-gtsqUy cKTvcv\\"
-         color=\\"black\\"
-         data-testid=\\"0-4\\"
-       />
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"0-5\\"
        >
@@ -313,11 +313,15 @@
        />
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"4-7\\"
+       >
+         <div
+           class=\\"sc-dlniIP eIaIwO\\"
          />
+       </div>
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"5-0\\"
        />
@@ -353,11 +357,15 @@
        />
        <div
          class=\\"sc-gtsqUy cKTvcv\\"
          color=\\"black\\"
          data-testid=\\"5-7\\"
+       >
+         <div
+           class=\\"sc-dlniIP eIaIwO\\"
          />
+       </div>
        <div
          class=\\"sc-gtsqUy cKTvcv\\"
          color=\\"black\\"
          data-testid=\\"6-0\\"
        >
@@ -465,11 +473,11 @@
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"6-7\\"
        >
          <div
-           class=\\"sc-bdnyFh iFMPlL\\"
+           class=\\"sc-bdnyFh gAkUhO\\"
            side=\\"black\\"
          >
            <img
              alt=\\"\\"
              src=\\"test-file-stub\\""
`;

exports[`Game core figures have right move patterns 57`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -33,10 +33,15 @@
        </div>
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"0-3\\"
+       />
+       <div
+         class=\\"sc-gtsqUy cKTvcv\\"
+         color=\\"black\\"
+         data-testid=\\"0-4\\"
        >
          <div
            class=\\"sc-bdnyFh leaQvT\\"
            side=\\"white\\"
          >
@@ -44,15 +49,10 @@
              alt=\\"\\"
              src=\\"test-file-stub\\"
            />
          </div>
        </div>
-       <div
-         class=\\"sc-gtsqUy cKTvcv\\"
-         color=\\"black\\"
-         data-testid=\\"0-4\\"
-       />
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"0-5\\"
        >"
`;

exports[`Game core figures have right move patterns 58`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -33,10 +33,15 @@
        </div>
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"0-3\\"
+       />
+       <div
+         class=\\"sc-gtsqUy cKTvcv\\"
+         color=\\"black\\"
+         data-testid=\\"0-4\\"
        >
          <div
            class=\\"sc-bdnyFh leaQvT\\"
            side=\\"white\\"
          >
@@ -44,15 +49,10 @@
              alt=\\"\\"
              src=\\"test-file-stub\\"
            />
          </div>
        </div>
-       <div
-         class=\\"sc-gtsqUy cKTvcv\\"
-         color=\\"black\\"
-         data-testid=\\"0-4\\"
-       />
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"0-5\\"
        >"
`;

exports[`Game core figures have right move patterns 59`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -33,10 +33,15 @@
        </div>
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"0-3\\"
+       />
+       <div
+         class=\\"sc-gtsqUy cKTvcv\\"
+         color=\\"black\\"
+         data-testid=\\"0-4\\"
        >
          <div
            class=\\"sc-bdnyFh leaQvT\\"
            side=\\"white\\"
          >
@@ -44,15 +49,10 @@
              alt=\\"\\"
              src=\\"test-file-stub\\"
            />
          </div>
        </div>
-       <div
-         class=\\"sc-gtsqUy cKTvcv\\"
-         color=\\"black\\"
-         data-testid=\\"0-4\\"
-       />
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"0-5\\"
        >
@@ -490,11 +490,11 @@
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"7-2\\"
        >
          <div
-           class=\\"sc-bdnyFh iFMPlL\\"
+           class=\\"sc-bdnyFh gAkUhO\\"
            side=\\"black\\"
          >
            <img
              alt=\\"\\"
              src=\\"test-file-stub\\""
`;

exports[`Game core figures have right move patterns 60`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -33,10 +33,15 @@
        </div>
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"0-3\\"
+       />
+       <div
+         class=\\"sc-gtsqUy cKTvcv\\"
+         color=\\"black\\"
+         data-testid=\\"0-4\\"
        >
          <div
            class=\\"sc-bdnyFh leaQvT\\"
            side=\\"white\\"
          >
@@ -44,15 +49,10 @@
              alt=\\"\\"
              src=\\"test-file-stub\\"
            />
          </div>
        </div>
-       <div
-         class=\\"sc-gtsqUy cKTvcv\\"
-         color=\\"black\\"
-         data-testid=\\"0-4\\"
-       />
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"0-5\\"
        >
@@ -505,11 +505,11 @@
          class=\\"sc-gtsqUy cKTvcv\\"
          color=\\"black\\"
          data-testid=\\"7-3\\"
        >
          <div
-           class=\\"sc-bdnyFh iFMPlL\\"
+           class=\\"sc-bdnyFh gAkUhO\\"
            side=\\"black\\"
          >
            <img
              alt=\\"\\"
              src=\\"test-file-stub\\"
@@ -518,11 +518,15 @@
        </div>
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"7-4\\"
+       >
+         <div
+           class=\\"sc-dlniIP eIaIwO\\"
          />
+       </div>
        <div
          class=\\"sc-gtsqUy cKTvcv\\"
          color=\\"black\\"
          data-testid=\\"7-5\\"
        >"
`;

exports[`Game core figures have right move patterns 61`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -33,10 +33,15 @@
        </div>
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"0-3\\"
+       />
+       <div
+         class=\\"sc-gtsqUy cKTvcv\\"
+         color=\\"black\\"
+         data-testid=\\"0-4\\"
        >
          <div
            class=\\"sc-bdnyFh leaQvT\\"
            side=\\"white\\"
          >
@@ -44,15 +49,10 @@
              alt=\\"\\"
              src=\\"test-file-stub\\"
            />
          </div>
        </div>
-       <div
-         class=\\"sc-gtsqUy cKTvcv\\"
-         color=\\"black\\"
-         data-testid=\\"0-4\\"
-       />
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"0-5\\"
        >
@@ -503,10 +503,15 @@
        </div>
        <div
          class=\\"sc-gtsqUy cKTvcv\\"
          color=\\"black\\"
          data-testid=\\"7-3\\"
+       />
+       <div
+         class=\\"sc-gtsqUy jhSroJ\\"
+         color=\\"white\\"
+         data-testid=\\"7-4\\"
        >
          <div
            class=\\"sc-bdnyFh iFMPlL\\"
            side=\\"black\\"
          >
@@ -514,15 +519,10 @@
              alt=\\"\\"
              src=\\"test-file-stub\\"
            />
          </div>
        </div>
-       <div
-         class=\\"sc-gtsqUy jhSroJ\\"
-         color=\\"white\\"
-         data-testid=\\"7-4\\"
-       />
        <div
          class=\\"sc-gtsqUy cKTvcv\\"
          color=\\"black\\"
          data-testid=\\"7-5\\"
        >"
`;

exports[`Game core figures have right move patterns 62`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -33,10 +33,15 @@
        </div>
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"0-3\\"
+       />
+       <div
+         class=\\"sc-gtsqUy cKTvcv\\"
+         color=\\"black\\"
+         data-testid=\\"0-4\\"
        >
          <div
            class=\\"sc-bdnyFh leaQvT\\"
            side=\\"white\\"
          >
@@ -45,15 +50,10 @@
              src=\\"test-file-stub\\"
            />
          </div>
        </div>
        <div
-         class=\\"sc-gtsqUy cKTvcv\\"
-         color=\\"black\\"
-         data-testid=\\"0-4\\"
-       />
-       <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"0-5\\"
        >
          <div
@@ -503,10 +503,15 @@
        </div>
        <div
          class=\\"sc-gtsqUy cKTvcv\\"
          color=\\"black\\"
          data-testid=\\"7-3\\"
+       />
+       <div
+         class=\\"sc-gtsqUy jhSroJ\\"
+         color=\\"white\\"
+         data-testid=\\"7-4\\"
        >
          <div
            class=\\"sc-bdnyFh iFMPlL\\"
            side=\\"black\\"
          >
@@ -514,22 +519,17 @@
              alt=\\"\\"
              src=\\"test-file-stub\\"
            />
          </div>
        </div>
-       <div
-         class=\\"sc-gtsqUy jhSroJ\\"
-         color=\\"white\\"
-         data-testid=\\"7-4\\"
-       />
        <div
          class=\\"sc-gtsqUy cKTvcv\\"
          color=\\"black\\"
          data-testid=\\"7-5\\"
        >
          <div
-           class=\\"sc-bdnyFh iFMPlL\\"
+           class=\\"sc-bdnyFh gAkUhO\\"
            side=\\"black\\"
          >
            <img
              alt=\\"\\"
              src=\\"test-file-stub\\""
`;

exports[`Game core figures have right move patterns 63`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -33,10 +33,15 @@
        </div>
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"0-3\\"
+       />
+       <div
+         class=\\"sc-gtsqUy cKTvcv\\"
+         color=\\"black\\"
+         data-testid=\\"0-4\\"
        >
          <div
            class=\\"sc-bdnyFh leaQvT\\"
            side=\\"white\\"
          >
@@ -44,15 +49,10 @@
              alt=\\"\\"
              src=\\"test-file-stub\\"
            />
          </div>
        </div>
-       <div
-         class=\\"sc-gtsqUy cKTvcv\\"
-         color=\\"black\\"
-         data-testid=\\"0-4\\"
-       />
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"0-5\\"
        >
@@ -503,10 +503,15 @@
        </div>
        <div
          class=\\"sc-gtsqUy cKTvcv\\"
          color=\\"black\\"
          data-testid=\\"7-3\\"
+       />
+       <div
+         class=\\"sc-gtsqUy jhSroJ\\"
+         color=\\"white\\"
+         data-testid=\\"7-4\\"
        >
          <div
            class=\\"sc-bdnyFh iFMPlL\\"
            side=\\"black\\"
          >
@@ -514,15 +519,10 @@
              alt=\\"\\"
              src=\\"test-file-stub\\"
            />
          </div>
        </div>
-       <div
-         class=\\"sc-gtsqUy jhSroJ\\"
-         color=\\"white\\"
-         data-testid=\\"7-4\\"
-       />
        <div
          class=\\"sc-gtsqUy cKTvcv\\"
          color=\\"black\\"
          data-testid=\\"7-5\\"
        >"
`;

exports[`Game core figures have right move patterns 64`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -33,10 +33,15 @@
        </div>
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"0-3\\"
+       />
+       <div
+         class=\\"sc-gtsqUy cKTvcv\\"
+         color=\\"black\\"
+         data-testid=\\"0-4\\"
        >
          <div
            class=\\"sc-bdnyFh leaQvT\\"
            side=\\"white\\"
          >
@@ -44,15 +49,10 @@
              alt=\\"\\"
              src=\\"test-file-stub\\"
            />
          </div>
        </div>
-       <div
-         class=\\"sc-gtsqUy cKTvcv\\"
-         color=\\"black\\"
-         data-testid=\\"0-4\\"
-       />
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"0-5\\"
        >
@@ -503,10 +503,15 @@
        </div>
        <div
          class=\\"sc-gtsqUy cKTvcv\\"
          color=\\"black\\"
          data-testid=\\"7-3\\"
+       />
+       <div
+         class=\\"sc-gtsqUy jhSroJ\\"
+         color=\\"white\\"
+         data-testid=\\"7-4\\"
        >
          <div
            class=\\"sc-bdnyFh iFMPlL\\"
            side=\\"black\\"
          >
@@ -514,15 +519,10 @@
              alt=\\"\\"
              src=\\"test-file-stub\\"
            />
          </div>
        </div>
-       <div
-         class=\\"sc-gtsqUy jhSroJ\\"
-         color=\\"white\\"
-         data-testid=\\"7-4\\"
-       />
        <div
          class=\\"sc-gtsqUy cKTvcv\\"
          color=\\"black\\"
          data-testid=\\"7-5\\"
        >"
`;

exports[`Game core should render board with start positions 1`] = `
<DocumentFragment>
  <div
    class="sc-jSFipO gkqyRK"
    data-testid="chess-board"
  >
    <div
      class="sc-eCAqax hnnYBr"
    >
      <div
        class="sc-gtsqUy cKTvcv"
        color="black"
        data-testid="0-0"
      />
      <div
        class="sc-gtsqUy jhSroJ"
        color="white"
        data-testid="0-1"
      />
      <div
        class="sc-gtsqUy cKTvcv"
        color="black"
        data-testid="0-2"
      >
        <div
          class="sc-bdnyFh leaQvT"
          side="white"
        >
          <img
            alt=""
            src="test-file-stub"
          />
        </div>
      </div>
      <div
        class="sc-gtsqUy jhSroJ"
        color="white"
        data-testid="0-3"
      >
        <div
          class="sc-bdnyFh leaQvT"
          side="white"
        >
          <img
            alt=""
            src="test-file-stub"
          />
        </div>
      </div>
      <div
        class="sc-gtsqUy cKTvcv"
        color="black"
        data-testid="0-4"
      />
      <div
        class="sc-gtsqUy jhSroJ"
        color="white"
        data-testid="0-5"
      >
        <div
          class="sc-bdnyFh leaQvT"
          side="white"
        >
          <img
            alt=""
            src="test-file-stub"
          />
        </div>
      </div>
      <div
        class="sc-gtsqUy cKTvcv"
        color="black"
        data-testid="0-6"
      />
      <div
        class="sc-gtsqUy jhSroJ"
        color="white"
        data-testid="0-7"
      />
      <div
        class="sc-gtsqUy jhSroJ"
        color="white"
        data-testid="1-0"
      >
        <div
          class="sc-bdnyFh leaQvT"
          side="white"
        >
          <img
            alt=""
            src="test-file-stub"
          />
        </div>
      </div>
      <div
        class="sc-gtsqUy cKTvcv"
        color="black"
        data-testid="1-1"
      >
        <div
          class="sc-bdnyFh leaQvT"
          side="white"
        >
          <img
            alt=""
            src="test-file-stub"
          />
        </div>
      </div>
      <div
        class="sc-gtsqUy jhSroJ"
        color="white"
        data-testid="1-2"
      >
        <div
          class="sc-bdnyFh leaQvT"
          side="white"
        >
          <img
            alt=""
            src="test-file-stub"
          />
        </div>
      </div>
      <div
        class="sc-gtsqUy cKTvcv"
        color="black"
        data-testid="1-3"
      >
        <div
          class="sc-bdnyFh leaQvT"
          side="white"
        >
          <img
            alt=""
            src="test-file-stub"
          />
        </div>
      </div>
      <div
        class="sc-gtsqUy jhSroJ"
        color="white"
        data-testid="1-4"
      >
        <div
          class="sc-bdnyFh leaQvT"
          side="white"
        >
          <img
            alt=""
            src="test-file-stub"
          />
        </div>
      </div>
      <div
        class="sc-gtsqUy cKTvcv"
        color="black"
        data-testid="1-5"
      >
        <div
          class="sc-bdnyFh leaQvT"
          side="white"
        >
          <img
            alt=""
            src="test-file-stub"
          />
        </div>
      </div>
      <div
        class="sc-gtsqUy jhSroJ"
        color="white"
        data-testid="1-6"
      >
        <div
          class="sc-bdnyFh leaQvT"
          side="white"
        >
          <img
            alt=""
            src="test-file-stub"
          />
        </div>
      </div>
      <div
        class="sc-gtsqUy cKTvcv"
        color="black"
        data-testid="1-7"
      >
        <div
          class="sc-bdnyFh leaQvT"
          side="white"
        >
          <img
            alt=""
            src="test-file-stub"
          />
        </div>
      </div>
      <div
        class="sc-gtsqUy cKTvcv"
        color="black"
        data-testid="2-0"
      />
      <div
        class="sc-gtsqUy jhSroJ"
        color="white"
        data-testid="2-1"
      />
      <div
        class="sc-gtsqUy cKTvcv"
        color="black"
        data-testid="2-2"
      />
      <div
        class="sc-gtsqUy jhSroJ"
        color="white"
        data-testid="2-3"
      />
      <div
        class="sc-gtsqUy cKTvcv"
        color="black"
        data-testid="2-4"
      />
      <div
        class="sc-gtsqUy jhSroJ"
        color="white"
        data-testid="2-5"
      />
      <div
        class="sc-gtsqUy cKTvcv"
        color="black"
        data-testid="2-6"
      />
      <div
        class="sc-gtsqUy jhSroJ"
        color="white"
        data-testid="2-7"
      />
      <div
        class="sc-gtsqUy jhSroJ"
        color="white"
        data-testid="3-0"
      />
      <div
        class="sc-gtsqUy cKTvcv"
        color="black"
        data-testid="3-1"
      />
      <div
        class="sc-gtsqUy jhSroJ"
        color="white"
        data-testid="3-2"
      />
      <div
        class="sc-gtsqUy cKTvcv"
        color="black"
        data-testid="3-3"
      />
      <div
        class="sc-gtsqUy jhSroJ"
        color="white"
        data-testid="3-4"
      />
      <div
        class="sc-gtsqUy cKTvcv"
        color="black"
        data-testid="3-5"
      />
      <div
        class="sc-gtsqUy jhSroJ"
        color="white"
        data-testid="3-6"
      />
      <div
        class="sc-gtsqUy cKTvcv"
        color="black"
        data-testid="3-7"
      />
      <div
        class="sc-gtsqUy cKTvcv"
        color="black"
        data-testid="4-0"
      />
      <div
        class="sc-gtsqUy jhSroJ"
        color="white"
        data-testid="4-1"
      />
      <div
        class="sc-gtsqUy cKTvcv"
        color="black"
        data-testid="4-2"
      />
      <div
        class="sc-gtsqUy jhSroJ"
        color="white"
        data-testid="4-3"
      />
      <div
        class="sc-gtsqUy cKTvcv"
        color="black"
        data-testid="4-4"
      />
      <div
        class="sc-gtsqUy jhSroJ"
        color="white"
        data-testid="4-5"
      />
      <div
        class="sc-gtsqUy cKTvcv"
        color="black"
        data-testid="4-6"
      />
      <div
        class="sc-gtsqUy jhSroJ"
        color="white"
        data-testid="4-7"
      />
      <div
        class="sc-gtsqUy jhSroJ"
        color="white"
        data-testid="5-0"
      />
      <div
        class="sc-gtsqUy cKTvcv"
        color="black"
        data-testid="5-1"
      />
      <div
        class="sc-gtsqUy jhSroJ"
        color="white"
        data-testid="5-2"
      />
      <div
        class="sc-gtsqUy cKTvcv"
        color="black"
        data-testid="5-3"
      />
      <div
        class="sc-gtsqUy jhSroJ"
        color="white"
        data-testid="5-4"
      />
      <div
        class="sc-gtsqUy cKTvcv"
        color="black"
        data-testid="5-5"
      />
      <div
        class="sc-gtsqUy jhSroJ"
        color="white"
        data-testid="5-6"
      />
      <div
        class="sc-gtsqUy cKTvcv"
        color="black"
        data-testid="5-7"
      />
      <div
        class="sc-gtsqUy cKTvcv"
        color="black"
        data-testid="6-0"
      >
        <div
          class="sc-bdnyFh iFMPlL"
          side="black"
        >
          <img
            alt=""
            src="test-file-stub"
          />
        </div>
      </div>
      <div
        class="sc-gtsqUy jhSroJ"
        color="white"
        data-testid="6-1"
      >
        <div
          class="sc-bdnyFh iFMPlL"
          side="black"
        >
          <img
            alt=""
            src="test-file-stub"
          />
        </div>
      </div>
      <div
        class="sc-gtsqUy cKTvcv"
        color="black"
        data-testid="6-2"
      >
        <div
          class="sc-bdnyFh iFMPlL"
          side="black"
        >
          <img
            alt=""
            src="test-file-stub"
          />
        </div>
      </div>
      <div
        class="sc-gtsqUy jhSroJ"
        color="white"
        data-testid="6-3"
      >
        <div
          class="sc-bdnyFh iFMPlL"
          side="black"
        >
          <img
            alt=""
            src="test-file-stub"
          />
        </div>
      </div>
      <div
        class="sc-gtsqUy cKTvcv"
        color="black"
        data-testid="6-4"
      >
        <div
          class="sc-bdnyFh iFMPlL"
          side="black"
        >
          <img
            alt=""
            src="test-file-stub"
          />
        </div>
      </div>
      <div
        class="sc-gtsqUy jhSroJ"
        color="white"
        data-testid="6-5"
      >
        <div
          class="sc-bdnyFh iFMPlL"
          side="black"
        >
          <img
            alt=""
            src="test-file-stub"
          />
        </div>
      </div>
      <div
        class="sc-gtsqUy cKTvcv"
        color="black"
        data-testid="6-6"
      >
        <div
          class="sc-bdnyFh iFMPlL"
          side="black"
        >
          <img
            alt=""
            src="test-file-stub"
          />
        </div>
      </div>
      <div
        class="sc-gtsqUy jhSroJ"
        color="white"
        data-testid="6-7"
      >
        <div
          class="sc-bdnyFh iFMPlL"
          side="black"
        >
          <img
            alt=""
            src="test-file-stub"
          />
        </div>
      </div>
      <div
        class="sc-gtsqUy jhSroJ"
        color="white"
        data-testid="7-0"
      />
      <div
        class="sc-gtsqUy cKTvcv"
        color="black"
        data-testid="7-1"
      />
      <div
        class="sc-gtsqUy jhSroJ"
        color="white"
        data-testid="7-2"
      >
        <div
          class="sc-bdnyFh iFMPlL"
          side="black"
        >
          <img
            alt=""
            src="test-file-stub"
          />
        </div>
      </div>
      <div
        class="sc-gtsqUy cKTvcv"
        color="black"
        data-testid="7-3"
      >
        <div
          class="sc-bdnyFh iFMPlL"
          side="black"
        >
          <img
            alt=""
            src="test-file-stub"
          />
        </div>
      </div>
      <div
        class="sc-gtsqUy jhSroJ"
        color="white"
        data-testid="7-4"
      />
      <div
        class="sc-gtsqUy cKTvcv"
        color="black"
        data-testid="7-5"
      >
        <div
          class="sc-bdnyFh iFMPlL"
          side="black"
        >
          <img
            alt=""
            src="test-file-stub"
          />
        </div>
      </div>
      <div
        class="sc-gtsqUy jhSroJ"
        color="white"
        data-testid="7-6"
      />
      <div
        class="sc-gtsqUy cKTvcv"
        color="black"
        data-testid="7-7"
      />
    </div>
  </div>
</DocumentFragment>
`;
